fixed rpg.css for spacing and alignment

--- a/RoundTableGaming/src/main/resources/static/css/stylesheet.css
+++ b/RoundTableGaming/src/main/resources/static/css/stylesheet.css
@@ -2,7 +2,7 @@
 
 html body {
 
-
+background-image: url("https://i.imgur.com/Tdu3I6h.jpeg");
 
 }
 
